[gd_scene load_steps=21 format=3 uid="uid://c4y4hleyev5w2"]

[ext_resource type="Script" path="res://Scripts/camera.gd" id="1_mbcrn"]
[ext_resource type="Shader" path="res://Shaders/radial_blur.gdshader" id="2_cpfqb"]
[ext_resource type="Shader" path="res://Shaders/invert_color.gdshader" id="3_3d1cg"]
[ext_resource type="Texture2D" uid="uid://1b4si2ytk217" path="res://Assets/Sprite Sheet.png" id="4_8iw7y"]
[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="4_wb6s5"]
[ext_resource type="Texture2D" uid="uid://cywpsaa73tid3" path="res://Assets/MenuTextures/Button Texture.png" id="5_oxghw"]
[ext_resource type="FontFile" uid="uid://nf83gnipy1pm" path="res://Fonts/prstartk.ttf" id="6_ykkpx"]
[ext_resource type="Texture2D" uid="uid://ei6wc530bgtj" path="res://Assets/Shop Menu.png" id="7_2o854"]

[sub_resource type="CanvasTexture" id="CanvasTexture_64wl2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ujnku"]
shader = ExtResource("2_cpfqb")
shader_parameter/blur_center = Vector2(0.5, 0.5)
shader_parameter/blur_power = 0.0
shader_parameter/sampling_count = 6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x50pl"]
shader = ExtResource("3_3d1cg")
shader_parameter/strength = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p7lmw"]
shader = ExtResource("4_wb6s5")
shader_parameter/amount = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t3563"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m3q7b"]
texture = ExtResource("5_oxghw")
texture_margin_left = 12.0
texture_margin_top = 5.0
texture_margin_right = 12.0
texture_margin_bottom = 5.0
expand_margin_top = 1.0
region_rect = Rect2(73, 11, 63, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iyykc"]
texture = ExtResource("5_oxghw")
texture_margin_left = 12.0
texture_margin_top = 5.0
texture_margin_right = 12.0
texture_margin_bottom = 5.0
expand_margin_top = 1.0
region_rect = Rect2(12, 11, 56, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y31l4"]
texture = ExtResource("5_oxghw")
texture_margin_left = 12.0
texture_margin_top = 6.0
texture_margin_right = 12.0
texture_margin_bottom = 6.0
region_rect = Rect2(12, 43, 56, 26)

[sub_resource type="Theme" id="Theme_erjpj"]
default_font = ExtResource("6_ykkpx")
default_font_size = 8
Button/colors/font_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 8
Button/styles/focus = SubResource("StyleBoxEmpty_t3563")
Button/styles/hover = SubResource("StyleBoxTexture_m3q7b")
Button/styles/normal = SubResource("StyleBoxTexture_iyykc")
Button/styles/pressed = SubResource("StyleBoxTexture_y31l4")

[sub_resource type="LabelSettings" id="LabelSettings_dvgir"]
font_size = 8
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_srwc7"]
load_path = "res://.godot/imported/Shop Menu.png-004344ee34953f4e69c31af34f4a8cfd.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_hurpu"]
load_path = "res://.godot/imported/Shop Menu.png-004344ee34953f4e69c31af34f4a8cfd.ctex"

[node name="Camera" type="Camera2D"]
anchor_mode = 0
script = ExtResource("1_mbcrn")

[node name="FlashLayer" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 50
scale = Vector2(304.5, 192.5)
texture = SubResource("CanvasTexture_64wl2")
centered = false

[node name="RadialBlurLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="RadialBlurLayer"]
material = SubResource("ShaderMaterial_ujnku")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InvertColorLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="InvertColorLayer"]
material = SubResource("ShaderMaterial_x50pl")
offset_right = 304.0
offset_bottom = 192.0

[node name="BlurLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="BlurLayer"]
z_index = 49
material = SubResource("ShaderMaterial_p7lmw")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -96.0
offset_right = 51.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UIContainer" type="Node2D" parent="UILayer"]
visible = false
z_index = 49

[node name="AppleSprite" type="Sprite2D" parent="UILayer/UIContainer"]
position = Vector2(8, 8)
texture = ExtResource("4_8iw7y")
region_enabled = true
region_rect = Rect2(48, 112, 16, 16)

[node name="AppleCount" type="Label" parent="UILayer/UIContainer"]
offset_left = 14.0
offset_top = 5.0
offset_right = 30.0
offset_bottom = 13.0
theme = SubResource("Theme_erjpj")
text = "0"
label_settings = SubResource("LabelSettings_dvgir")
horizontal_alignment = 1

[node name="GreenKeySprite" type="Sprite2D" parent="UILayer/UIContainer"]
visible = false
position = Vector2(295, 7)
texture = ExtResource("4_8iw7y")
region_enabled = true
region_rect = Rect2(32, 120, 16, 8)

[node name="RedKeySprite" type="Sprite2D" parent="UILayer/UIContainer"]
visible = false
position = Vector2(279, 7)
texture = ExtResource("4_8iw7y")
region_enabled = true
region_rect = Rect2(16, 120, 16, 8)

[node name="ShopUIContainer" type="Node2D" parent="UILayer"]
visible = false
z_index = 49

[node name="BackGroundSprite" type="Sprite2D" parent="UILayer/ShopUIContainer"]
position = Vector2(233, 96)
texture = ExtResource("7_2o854")
region_enabled = true
region_rect = Rect2(0, 0, 120, 136)

[node name="SelectorSprite" type="Sprite2D" parent="UILayer/ShopUIContainer"]
position = Vector2(233, 75)
texture = ExtResource("7_2o854")
region_enabled = true
region_rect = Rect2(127, 16, 92, 10)

[node name="DescriptionSprite" type="Sprite2D" parent="UILayer/ShopUIContainer"]
position = Vector2(233, 139)
texture = ExtResource("7_2o854")
region_enabled = true
region_rect = Rect2(128, 48, 92, 32)

[node name="BoughtCover1" type="Sprite2D" parent="UILayer/ShopUIContainer"]
visible = false
position = Vector2(234, 76)
texture = ExtResource("7_2o854")
region_enabled = true
region_rect = Rect2(8, 144, 90, 10)

[node name="BoughtCover2" type="Sprite2D" parent="UILayer/ShopUIContainer"]
visible = false
position = Vector2(234, 87)
texture = SubResource("CompressedTexture2D_srwc7")
region_enabled = true
region_rect = Rect2(8, 144, 90, 10)

[node name="BoughtCover3" type="Sprite2D" parent="UILayer/ShopUIContainer"]
visible = false
position = Vector2(234, 98)
texture = SubResource("CompressedTexture2D_hurpu")
region_enabled = true
region_rect = Rect2(8, 144, 90, 10)

[node name="UICover" type="ColorRect" parent="UILayer/ShopUIContainer"]
offset_left = 173.0
offset_top = 30.0
offset_right = 304.0
offset_bottom = 192.0
color = Color(0, 0, 0, 1)

[node name="AmuletContainer" type="Node2D" parent="UILayer"]
visible = false
z_index = 49
position = Vector2(152, 96)
scale = Vector2(2, 2)

[node name="DottedLine" type="Sprite2D" parent="UILayer/AmuletContainer"]
texture = ExtResource("4_8iw7y")
region_enabled = true
region_rect = Rect2(80, 128, 16, 16)

[node name="Piece1" type="Sprite2D" parent="UILayer/AmuletContainer"]
texture = ExtResource("4_8iw7y")
offset = Vector2(-4.5, -4.5)
region_enabled = true
region_rect = Rect2(64, 119, 9, 9)

[node name="Piece2" type="Sprite2D" parent="UILayer/AmuletContainer"]
texture = ExtResource("4_8iw7y")
offset = Vector2(4.5, -4.5)
region_enabled = true
region_rect = Rect2(73, 119, 9, 9)

[node name="Piece3" type="Sprite2D" parent="UILayer/AmuletContainer"]
texture = ExtResource("4_8iw7y")
offset = Vector2(5.5, 2)
region_enabled = true
region_rect = Rect2(91, 118, 9, 10)

[node name="Piece4" type="Sprite2D" parent="UILayer/AmuletContainer"]
texture = ExtResource("4_8iw7y")
offset = Vector2(0, 4.5)
region_enabled = true
region_rect = Rect2(100, 119, 12, 9)

[node name="Piece5" type="Sprite2D" parent="UILayer/AmuletContainer"]
texture = ExtResource("4_8iw7y")
offset = Vector2(-5.5, 2)
region_enabled = true
region_rect = Rect2(82, 118, 9, 10)
